<resources>
    <string name="app_name">LeaseOrRentHome Inc.</string>
    <string name="payment">Payment</string>
    <string name="apartment">Apartment</string>
    <string name="detached_home">Detached Home</string>
    <string name="semiDetached_home">Semi-detached Home</string>
    <string name="condominium_apartment">Condominium Apartment</string>
    <string name="town_house">Town House</string>
    <string name="homeOption">Please use the side menu to choose your home type</string>
    <string name="test1">74 Dunkirk Rd, Toronto, Ontario</string>
    <string name="test2">$1,399,999 CAD</string>
    <string name="nameTextView">74 Dunkirk Rd, Toronto, Ontario</string>
    <string name="detachedPrice1">$1,399,999 CAD</string>
    <string name="detachedAddress2">74 Dunkirk Rd, Toronto, Ontario</string>
    <string name="detachedPrice2">$1,399,999 CAD</string>
    <string name="selected">Your choice of home: </string>
    <string name="tvPayment">Please select your method of payment</string>
    //Home Types activity
    <string name="textView">Please select one of the options from the side menu</string>

    <string name="cashOption">Cash</string>
    <string name="creditcardOption">Credit Card</string>
    <string name="debitcardOption">Debit Card</string>
    <string name="checkoutBtn">Checkout</string>
    <string name="paymentInstruction">Please select one of the following payment methods: </string>

not changed at all
    <string name="paymentTotal">Total Payment</string>
    <string name="paymentOption">Payment Option</string>
    <string name="payInfo_activity_request_code">2</string>


</resources>
